Fix the font size and spacing

--- a/static/css/tracing.css
+++ b/static/css/tracing.css
@@ -68,6 +68,7 @@
     align-items: center;
     justify-content: center;
     margin: 0px;
+    font-size: 12px;
 }
 
 .section-button a{
@@ -431,14 +432,14 @@ a.warn-box-anchor {
     height: 100vh;
 }
 
-#dashboard{
+/* #dashboard{
     overflow-y: auto;
-}
+} */
 
 /* Trace Timeline View */
 
 #timeline-container{
-    margin-top: 14px;
+    margin-top: 12px;
     box-shadow: var(--box-shadow);
     background-color: var(--black1-to-white0);
     border: 1px solid var(--search-input-border);
@@ -446,25 +447,26 @@ a.warn-box-anchor {
     padding-bottom: 40px;
     overflow: auto; 
     width: 100%;
-    height: 50vh; 
+    height: calc(100vh - 350px);
     transition: height 0.3s ease; 
+    position: relative;
 }
 
 .back-to-search-traces{
     cursor: pointer;
-    padding: 0.25rem 0.5rem;
+    padding-right: 4px;
     color: var(--purple-1);
     font-weight: 600;
 }
 
 .trace-name{
-    font-size: 18px;
+    font-size: 14px;
     font-weight: bold;
 }
 
 .trace-details{
-    margin-top: 8px;
-    font-size: 14px;
+    margin-top: 2px;
+    font-size: 12px;
     color: var(--subsection-border);
     font-weight: normal !important;
 
@@ -472,7 +474,7 @@ a.warn-box-anchor {
 
 .trace-name .trace-id{
     margin-left: 10px;
-    font-size: 16px !important;
+    font-size: 12px !important;
 }
 
 .trace-details div{
@@ -486,7 +488,7 @@ a.warn-box-anchor {
 }
 
 .time-label {
-    font-size: 14px;
+    font-size: 12px;
     fill: var(--text-color);
     margin-bottom: 10px;
 }
@@ -498,7 +500,7 @@ a.warn-box-anchor {
 }
 
 .node-label {
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .anomalous-node {
@@ -514,7 +516,7 @@ a.warn-box-anchor {
 }
 
 .gantt-chart-heading{
-    font-size: 16px;
+    font-size: 14px;
     font-weight: bold;
     fill: var(--text-color);
 }
@@ -528,7 +530,7 @@ a.warn-box-anchor {
     background-color: var(--ui-widget-bg-color) !important;
     padding: 5px;
     border-radius: 5px;
-    font-size: 13px;
+    font-size: 12px;
 }
 
 .tooltip-design {
@@ -547,18 +549,18 @@ circle:hover{
     height: 160px !important;
 }
 .span-details-container{
-    margin-top: 14px;
+    margin-top: 12px;
     box-shadow: var(--box-shadow);
     background-color: var(--black1-to-white0);
     border: 1px solid var(--search-input-border);
     border-radius: 10px;
-    padding-bottom: 40px;
     overflow: auto;
-    height: 50vh;
-    padding: 20px;
+    height: calc(100vh - 350px);
+    padding: 14px;
     margin-left: 10px;
     min-width: 450px;
     transition: height 0.3s ease; 
+    font-size: 12px;
 }
 
 .span-details-container .close-btn{
@@ -570,7 +572,7 @@ circle:hover{
 }
 
 .details-container div{
-    margin-bottom: 8px;
+    margin-bottom: 6px;
 }
 
 .details-container table th,.details-container table td{
@@ -586,7 +588,7 @@ circle:hover{
     border-radius: 10px;
     padding-bottom: 40px;
     overflow: auto;
-    height: 100%;
+    height: 250px;
     padding: 10px;
 }
 .logs-metrics-container .section-button,.max-min-btn {
@@ -594,16 +596,22 @@ circle:hover{
 }
 #timeline-container.expanded,
 .span-details-container.expanded{
-    height: 75vh;
+    height: calc(100vh - 150px);
 }
 .max-min-btn{
-    font-size: 17px;
+    font-size: 14px;
     font-weight: bolder;
     transform: rotate(-45deg);
+    margin-bottom: 10px;
 }
 .max-min-btn.minimized{
     transform: rotate(135deg);
 }
 .logs-metrics-container.minimized{
     height: 50px;
+}
+
+#timeline-container svg {
+    display: block;
+    min-width: 100%;
 }
